# susurrate

./: .gitignore  LICENSE  PLAN.md  README.md  WINDOWS.md  pyproject.toml  setup-windows.ps1
.playwright-mcp/: page-2026-07-06T15-47-08-058Z.yml
contrib/: benchmark.sh  com.jondanzig.susurrate.plist  daemon-windows.py  daemon-windows.vbs  install-daemon-windows.ps1
src/susurrate/: app.py  audio.py  dictionary.py  fmt.py  history.py  hotkey.py  inject.py  remote.py  server.py  transcribe.py  webui.py
tests/: test_dictionary.py  test_fmt.py  test_hotkey.py
